--- a/nostalgic-cafe/style.css
+++ b/nostalgic-cafe/style.css
@@ -21,8 +21,13 @@ body {
 .hidden { display: none; }
 
 #svg figcaption {
-  bottom: 10px;
-  right: 100px;
+  width: 100%;
+  background: rgb(66, 35, 56, 0.8);
+  bottom: 0;
+  text-align: right;
+  right: 0;
+  width: 100%;
+  padding: 10px;
 }
 #svg figcaption a, #svg figcaption a:link {
   color: #FBFBC0;
@@ -48,6 +53,17 @@ body {
 #track-list {
   width: 500px;
   position: relative;
+}
+#track-list::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  background: #422338;
+  height: 100%;
+  width: calc(100% - 2px);
+  left: 0;
+  z-index: -1;
+  border-right: 1px solid #d2d2d2;
 }
 .track {
   background: rgb(66, 35, 56);
@@ -114,12 +130,13 @@ body {
 
 h1 {
   font-family: Indie Flower;
-  margin-top: 50px;
   margin-bottom: -155px;
   font-size: 84px;
   color: #FBFBC0;
   text-shadow: 5px 5px 10px #422338;
   text-align: center;
+  position: absolute;
+  width: 100%;
   /*line-height: 50px;
   border-bottom: 18px double #FBFBC0;*/
 }
@@ -128,40 +145,18 @@ svg {
   z-index: -1;
 }
 
-@media screen and (min-width: 1440px) {
-  svg {
-    top: -10%;
-  }
+@media screen and (min-aspect-ratio: 11/10) {
+  svg { width: 100%; top: -8%; }
 }
-@media screen and (min-width: 1600px) {
-  svg {
-    top: -20%;
-  }
+@media screen and (max-aspect-ratio: 11/10) {
+  svg { height: 100%; }
 }
-@media screen and (min-width: 1850px) {
-  svg {
-    top: -25%;
-  }
-}
-@media screen and (max-width: 1024px) {
-  svg {
-    height: 100%;
-  }
-}
-
-@media screen and (max-width: 960px) {
-  svg {
-    left: -5%;
-  }
-}
-@media screen and (max-width: 832px) {
-  svg {
-    left: -20%;
-  }
+@media screen and (max-aspect-ratio: 11/10) and (max-width: 640px) {
+  svg { left: -30%; }
 }
 @media screen and (max-width: 640px) {
-  svg {
-    left: -50%;
+  h1 {
+    font-size: 13vw;
   }
 }
 .halo {
