--- a/src/nostalgic-cafe/style.css
+++ b/src/nostalgic-cafe/style.css
@@ -164,3 +164,30 @@ svg {
   opacity: 1;
 }
 .halo.hidden { display: initial; opacity: 0; }
+
+/* textbox */
+.textbox {
+  position: fixed;
+  bottom: 150px; 
+  background: rgba(255,255,255, 0.8);
+  padding: 10px 20px;
+  border-radius: 10px;
+  white-space: pre;
+  font-size: 32px;
+  line-height: 0.9;
+  font-family: Indie Flower;
+  font-weight: normal;
+  z-index: 999;
+  opacity: 0;
+}
+.textbox--animated {
+  opacity: 1;
+}
+.textbox--hidden {
+  display: none;
+}
+.textbox--hiding, .textbox--animated { bottom: 80%; }
+.textbox--showing {
+  opacity: 0;
+  bottom: 150px;
+}
